cmake_minimum_required( VERSION 2.6 )
cmake_policy( SET CMP0015 NEW )
project( wcExamples )

link_directories( ../lib )
include_directories( ../include )

add_executable( wcExampleRaw raw.c )
add_executable( wcExampleThread thread.c )
target_link_libraries( wcExampleRaw wc )
target_link_libraries( wcExampleThread wc )

if( CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUCC )
	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic" )
	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -Wextra -pedantic" )
endif()

set( BUILD_SDL2_EXAMPLES FALSE CACHE BOOL "Build SDL2 examples" )
if( BUILD_SDL2_EXAMPLES )
	find_package( OpenGL REQUIRED )
	add_executable( wcExampleSDL2OpenGL sdl_opengl.c )
	add_executable( wcExampleSDL2OpenGLPID sdl_opengl_pid.c )
	add_executable( wcExampleSDL2OpenGLWCEmulator sdl_opengl_wcemulator.c )
	target_link_libraries( wcExampleSDL2OpenGL wc SDL2 ${OPENGL_LIBRARIES} )
	target_link_libraries( wcExampleSDL2OpenGLPID wc SDL2 ${OPENGL_LIBRARIES} )
	target_link_libraries( wcExampleSDL2OpenGLWCEmulator wc SDL2 ${OPENGL_LIBRARIES} )
else( BUILD_SDL2_EXAMPLES )
	message( STATUS "NOT building SDL2 examples" )
endif( BUILD_SDL2_EXAMPLES )
